--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,6 +101,14 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            if (project.hasProperty('MY_RELEASE_KEYSTORE')) {
+                storeFile file(MY_RELEASE_KEYSTORE)
+                storePassword MY_RELEASE_STORE_PASSWORD
+                keyAlias MY_RELEASE_KEY_ALIAS
+                keyPassword MY_RELEASE_KEY_PASSWORD
+            }
+        }
     }
     buildTypes {
         debug {
@@ -109,7 +117,8 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            // signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             shrinkResources (findProperty('android.enableShrinkResourcesInReleaseBuilds')?.toBoolean() ?: false)
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
