--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -54,3 +54,8 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
+
+MY_RELEASE_KEYSTORE=my-release-key.keystore
+MY_RELEASE_KEY_ALIAS=my-key-alias
+MY_RELEASE_KEY_PASSWORD=BIEBERnd1D!
+MY_RELEASE_STORE_PASSWORD=BIEBERnd1D!
